--- a/pages/movie/movie-more/movie-more.wxss
+++ b/pages/movie/movie-more/movie-more.wxss
@@ -1,6 +1,17 @@
 /* pages/movie/movie-more/movie-more.wxss */
 @import "/pages/movie/movie-list/movie-list-template.wxss";
 
+.session-movie {
+  background: #fff;
+  border-width: 1px 0px 0px 0px;
+  border-style: solid;
+  border-color: #e6e6e6;
+}
+
+.session-movie-spacing {
+  margin-top: 84rpx;
+}
+
 .session-content-spacing {
   padding: 0rpx 30rpx 0rpx 30rpx;
   margin-top: 0rpx;
@@ -37,4 +48,8 @@
 
 .tab-normal {
   color: #9e9e9e;
+}
+
+.scroll-movie {
+  height:100vh;
 }
